syntax = "proto3";

option go_package = "github.com/jsirianni/systemstat/api";

package api;

service Database {
    rpc HealthCheck (HealthRequest) returns (Health) {}
    rpc GetAccount (GetAccountRequest) returns (Account) {}
    rpc CreateToken (CreateTokenRequest) returns (Token) {}
    rpc CreateAccount (CreateAccountRequest) returns (Account) {}
}

service Frontend {
    rpc HealthCheck (HealthRequest) returns (Health) {}
    rpc GetAccount (GetAccountRequest) returns (Account) {}
    rpc CreateToken (CreateTokenRequest) returns (Token) {}
    rpc CreateAccount (CreateAccountRequest) returns (Account) {}
}

message HealthRequest {

}

message Health {

}

/**

manage accounts

**/
message CreateAccountRequest {
    string token = 1;
    string email = 2;
}

message GetAccountRequest {
    // authentication
    string api_key    = 1;

    string account_id = 2;
}

message Account {
    string account_id = 1;
    string root_api_key = 2;
    string alert_type = 3;
    bytes alert_config = 4;
    string admin_email = 5;
}

/**

create signup token

**/
message CreateTokenRequest {
    // authentication
    string api_key    = 1;
}

message Token {
    string token = 1;
    bool claimed = 2;
    string claimed_by = 3;
}
